# local-hybrid-rag

./: .gitignore  MyTodos.md  README.md  docker-compose.yml  main.py  opensearch_visualization.ipynb  pyproject.toml
config/: constants.py  setup_opensearch.py  utils.py
index/: document_loader.py  document_splitter.py  ingest.py  ingest_pipeline.py  opensearch_ingest.py
retrieval/: document_retrieval.py  reranker.py  reranker_setup.py  retrieval_pipeline.py
tests/: test_ingest.py
