[project]
name = "local-hybrid-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "ipython>=9.15.0",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.4",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "markdownheadertextsplitter>=0.1.0",
    "markdownify>=1.2.0",
    "opensearch-py>=3.2.0",
    "pandas-stubs~=3.0.3",
    "wikipedia>=1.4.0",
]
